--- a/Cryptanalysis.ipynb
+++ b/Cryptanalysis.ipynb
@@ -9,6 +9,8 @@
     "from collections import Counter\n",
     "from nltk.util import ngrams\n",
     "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import math\n",
     "\n",
     "cipher_text = \"\"\n",
     "with open('cipher.txt', 'r') as ct_file:\n",
@@ -84,10 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "unigram_df = pd.DataFrame.from_dict(unigram_counter, orient='index', columns=[\"unigram_count\"]).sort_index()\n",
-    "unigram_df.head()"
+    "unigram_df = pd.DataFrame.from_dict(unigram_counter, orient='index', columns=[\"unigram_count\"]).sort_index()"
    ]
   },
   {
@@ -100,7 +99,8 @@
     "compare_unigram_df = pd.DataFrame()\n",
     "# Read English letters counts from \"War and Peace\"\n",
     "eng_unigram_df = pd.read_csv(\"eng_unigrams.txt\", sep=\" \", names=[\"unigram\", \"unigram_count\"], index_col=\"unigram\").sort_index()\n",
-    "compare_unigram_df[\"eng_rel_freq_perc\"] = eng_unigram_df.unigram_count.apply(lambda x: (x / eng_unigram_df.unigram_count.sum()) * 100.0)"
+    "compare_unigram_df[\"eng_rel_freq_perc\"] = eng_unigram_df.unigram_count.apply(lambda x: (x / eng_unigram_df.unigram_count.sum()) * 100.0)\n",
+    "compare_unigram_df[\"cipher_rel_freq_perc\"] = unigram_df.unigram_count.apply(lambda x: (x / unigram_df.unigram_count.sum()) * 100.0)"
    ]
   },
   {
@@ -116,12 +116,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "compare_unigram_df[\"cipher_rel_freq_perc\"] = unigram_df.unigram_count.apply(lambda x: (x / unigram_df.unigram_count.sum()) * 100.0)\n",
+    "compare_unigram_df.rename(columns={\"eng_rel_freq_perc\": \"English\", \"cipher_rel_freq_perc\": \"Ciphertext\"}, inplace=True)\n",
     "ax = compare_unigram_df.plot(kind=\"bar\", secondary_y=\"eng_rel_freq_perc\", figsize=(15,5), rot=0)\n",
     "ax.set_title(\"Relative frequency distribution of unigrams - English vs Ciphertext\")\n",
     "ax.set_ylabel(\"Percentage\")\n",
-    "ax.xaxis.label.set_visible(False)\n",
-    "#ax.legend([\"English\", \"Ciphertext\"])"
+    "ax.xaxis.label.set_visible(False)"
    ]
   },
   {
@@ -145,7 +144,8 @@
     "ax.set_xlabel(\"Frequency ranked letters\")\n",
     "# Override the x-axis labels inferred by pandas\n",
     "ax.set_xticks(range(unigram_df.shape[0]))\n",
-    "ax.set_xticklabels(unigram_df.index.values)"
+    "ax.set_xticklabels(unigram_df.index.values)\n",
+    "plt.show()"
    ]
   },
   {
@@ -213,13 +213,10 @@
     "bigram_df[\"rel_freq_perc\"] = bigram_df.bigram_count.apply(lambda x: (x / bigram_df.bigram_count.sum()) * 100.0)\n",
     "# Too many bigrams, filter out those having relative frequency lower than 1%\n",
     "high_freq_bigram_df = bigram_df[bigram_df.rel_freq_perc > 1]\n",
-    "ax = high_freq_bigram_df.plot(kind=\"bar\", y=\"rel_freq_perc\", legend=None)\n",
+    "ax = high_freq_bigram_df.plot(kind=\"bar\", y=\"rel_freq_perc\", legend=None, rot=0)\n",
     "ax.set_title(\"Relative frequency distribution of bigrams\")\n",
     "ax.set_ylabel(\"Percentage\")\n",
-    "for label in ax.get_xticklabels():\n",
-    "    label.set_rotation(0)\n",
-    "# Too big for the notebook, store to disk instead.\n",
-    "#ax.get_figure().savefig(\"bigrams_rel_freq.png\")"
+    "plt.show()"
    ]
   },
   {
@@ -287,13 +284,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import math\n",
-    "\n",
+    "eng_quadgram_df = pd.read_csv(\"eng_quadgrams.txt\",\n",
+    "                              sep=\" \", names=[\"quadgram\", \"quadgram_count\"], index_col=\"quadgram\")\n",
+    "tot_occur_eng_quadgrams_num = eng_quadgram_df.sum()\n",
+    "#eng_log_probs_dict = {}"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
     "log_probs_dict = {}\n",
     "tot_occur_quadgrams_num = sum(quadgram_counter.values())\n",
     "for key in quadgram_counter.keys():\n",
