Improve plots, add hill-climbing for substitution cipher

--- a/Cryptanalysis.ipynb
+++ b/Cryptanalysis.ipynb
@@ -6,11 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import Counter\n",
     "from nltk.util import ngrams\n",
+    "from pycipher import SimpleSubstitution\n",
+    "from collections import Counter\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import math\n",
+    "import numpy as np\n",
     "\n",
     "cipher_text = \"\"\n",
     "with open('cipher.txt', 'r') as ct_file:\n",
@@ -138,13 +139,14 @@
    "source": [
     "unigram_df[\"ranked_freq_perc\"] = unigram_df.unigram_count.apply(lambda x: (x / unigram_df.unigram_count.loc[\"E\"]) * 100.0)\n",
     "unigram_df.sort_values(by=\"ranked_freq_perc\", ascending=False, inplace=True)\n",
-    "ax = unigram_df.plot(y=\"ranked_freq_perc\", legend=None)\n",
+    "ax = unigram_df.plot(y=\"ranked_freq_perc\", grid=True, style='.-', figsize=(15,5), legend=None)\n",
     "ax.set_title(\"Characteristic frequency distribution\")\n",
     "ax.set_ylabel(\"Percentage\")\n",
     "ax.set_xlabel(\"Frequency ranked letters\")\n",
     "# Override the x-axis labels inferred by pandas\n",
     "ax.set_xticks(range(unigram_df.shape[0]))\n",
     "ax.set_xticklabels(unigram_df.index.values)\n",
+    "ax.grid(axis='x')\n",
     "plt.show()"
    ]
   },
@@ -268,6 +270,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's check how many unique quadgrams are in the ciphertext too. The **top-10 most common quadgrams** are SAEO, EOER, ENTE, HRSH, ATEE, REUN, EAEH, ELMS, DOEH, EINM."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -280,28 +289,95 @@
     "    for chunk in quadgram_cipher_list:\n",
     "        if quadgram == chunk:\n",
     "            quadgram_str = \"\".join(quadgram)\n",
-    "            quadgram_counter[quadgram_str] += 1"
+    "            quadgram_counter[quadgram_str] += 1\n",
+    "quadgram_counter.most_common(10)"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "In the following a simple **Hill Climbing algorithm** is implemented in order to attempt to break the cipher, under the assumption that a monographic substitution cipher is being used to encrypt the ciphertext. Unfortunately, the algorithm gets stuck. Therefore, from our analysis and from this result, we might assume that a transposition cipher is being used."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "eng_quadgram_df = pd.read_csv(\"eng_quadgrams.txt\",\n",
     "                              sep=\" \", names=[\"quadgram\", \"quadgram_count\"], index_col=\"quadgram\")\n",
-    "tot_occur_eng_quadgrams_num = eng_quadgram_df.sum()\n",
-    "#eng_log_probs_dict = {}"
+    "# To speed up things, filter out quadgrams having count less than 3 million. \n",
+    "eng_quadgram_df = eng_quadgram_df[eng_quadgram_df.quadgram_count > 3000000]\n",
+    "eng_quadgram_df[\"log_prob\"] = eng_quadgram_df.quadgram_count.apply(lambda x: np.log(x / eng_quadgram_df.quadgram_count.sum()))"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "log_probs_dict = {}\n",
-    "tot_occur_quadgrams_num = sum(quadgram_counter.values())\n",
-    "for key in quadgram_counter.keys():\n",
-    "    log_probs_dict[key] = math.log(float(quadgram_counter[key]) / tot_occur_quadgrams_num)\n",
-    "print(log_probs_dict)"
+    "def compute_quadgrams_similarity(eng_quadgrams_df, cipher_text):\n",
+    "    # Extract all the quadgrams with `ngrams` and stringfy them with join \n",
+    "    quadgrams_tuple = ( \"\".join(quadgram) for quadgram in set(ngrams(cipher_text, 4)) )\n",
+    "    score = 0\n",
+    "    floor_log_prob = np.log(0.01 / eng_quadgrams_df.quadgram_count.sum())\n",
+    "    for cipher_quadgram in quadgrams_tuple:\n",
+    "        if cipher_quadgram in eng_quadgrams_df.index.values:\n",
+    "            score += eng_quadgrams_df[\"log_prob\"].loc[cipher_quadgram]\n",
+    "        else:\n",
+    "            score += floor_log_prob\n",
+    "    return score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def break_mono_substitution(cipher_text, eng_quadgrams_df):\n",
+    "    initial_key = list(set(cipher_text))\n",
+    "    # Init the best score with a huge negative number\n",
+    "    best_score = -np.inf\n",
+    "    iteration_counter = 0\n",
+    "    parent_key = initial_key.copy()\n",
+    "    while True:\n",
+    "        iteration_counter += 1        \n",
+    "        np.random.shuffle(parent_key)\n",
+    "        deciphered_text = SimpleSubstitution(parent_key).decipher(cipher_text)\n",
+    "        parent_score = compute_quadgrams_similarity(eng_quadgrams_df, deciphered_text)\n",
+    "        child_key_trials_counter = 0\n",
+    "        while child_key_trials_counter < 1000:\n",
+    "            first_idx = np.random.randint(0, 23)\n",
+    "            second_idx = np.random.randint(0, 23)\n",
+    "            child_key = parent_key.copy()\n",
+    "            child_key[first_idx], child_key[second_idx] = child_key[second_idx], child_key[first_idx]\n",
+    "            deciphered_text = SimpleSubstitution(child_key).decipher(cipher_text)\n",
+    "            child_score = compute_quadgrams_similarity(eng_quadgrams_df, deciphered_text)\n",
+    "            if child_score > parent_score:\n",
+    "                parent_score = child_score\n",
+    "                parent_key = child_key.copy()\n",
+    "                child_key_trials_counter = 0\n",
+    "            child_key_trials_counter += 1\n",
+    "        if parent_score > best_score:\n",
+    "            best_score = parent_score\n",
+    "            deciphered_text = SimpleSubstitution(parent_key).decipher(cipher_text)\n",
+    "            print(f'(Iter. {iteration_counter}) Best score so far {best_score}')\n",
+    "            print(\"Best key {}\".format(\"\".join(parent_key)))\n",
+    "            print(f'Plaintext {deciphered_text}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment to run. WARNING: the CPU load will increase slightly!\n",
+    "# break_mono_substitution(cipher_text, eng_quadgram_df)"
    ]
   }
  ],
