Switch hill climbing algo to Columnar Transposition Cipher

--- a/Cryptanalysis.ipynb
+++ b/Cryptanalysis.ipynb
@@ -7,11 +7,15 @@
    "outputs": [],
    "source": [
     "from nltk.util import ngrams\n",
-    "from pycipher import SimpleSubstitution\n",
+    "from pycipher import ColTrans\n",
     "from collections import Counter\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import random\n",
+    "import multiprocessing\n",
+    "import string\n",
+    "from textwrap import wrap\n",
     "\n",
     "cipher_text = \"\"\n",
     "with open('cipher.txt', 'r') as ct_file:\n",
@@ -309,8 +313,17 @@
     "eng_quadgram_df = pd.read_csv(\"eng_quadgrams.txt\",\n",
     "                              sep=\" \", names=[\"quadgram\", \"quadgram_count\"], index_col=\"quadgram\")\n",
     "# To speed up things, filter out quadgrams having count less than 3 million. \n",
-    "eng_quadgram_df = eng_quadgram_df[eng_quadgram_df.quadgram_count > 3000000]\n",
+    "eng_quadgram_df = eng_quadgram_df[eng_quadgram_df.quadgram_count > 2500000]\n",
     "eng_quadgram_df[\"log_prob\"] = eng_quadgram_df.quadgram_count.apply(lambda x: np.log(x / eng_quadgram_df.quadgram_count.sum()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eng_quadgram_df.shape"
    ]
   },
   {
@@ -338,25 +351,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def break_mono_substitution(cipher_text, eng_quadgrams_df):\n",
-    "    initial_key = list(set(cipher_text))\n",
-    "    # Init the best score with a huge negative number\n",
+    "def break_coltrans(key_len, cipher_text, eng_quadgram_df):\n",
+    "    initial_key = random.sample(string.ascii_uppercase, key_len)\n",
     "    best_score = -np.inf\n",
     "    iteration_counter = 0\n",
     "    parent_key = initial_key.copy()\n",
     "    while True:\n",
-    "        iteration_counter += 1        \n",
+    "        if iteration_counter > 25:\n",
+    "            print(\"Restarting... Best score so far \", best_score)\n",
+    "            iteration_counter = 0\n",
+    "            parent_key = random.sample(string.ascii_uppercase, key_len)\n",
+    "        iteration_counter += 1\n",
     "        np.random.shuffle(parent_key)\n",
-    "        deciphered_text = SimpleSubstitution(parent_key).decipher(cipher_text)\n",
-    "        parent_score = compute_quadgrams_similarity(eng_quadgrams_df, deciphered_text)\n",
+    "        deciphered_text = ColTrans(\"\".join(parent_key)).decipher(cipher_text)\n",
+    "        parent_score = compute_quadgrams_similarity(eng_quadgram_df, deciphered_text)\n",
     "        child_key_trials_counter = 0\n",
-    "        while child_key_trials_counter < 1000:\n",
-    "            first_idx = np.random.randint(0, 23)\n",
-    "            second_idx = np.random.randint(0, 23)\n",
+    "        while child_key_trials_counter < 50:\n",
+    "            first_idx = np.random.randint(0, key_len)\n",
+    "            second_idx = np.random.randint(0, key_len)\n",
     "            child_key = parent_key.copy()\n",
     "            child_key[first_idx], child_key[second_idx] = child_key[second_idx], child_key[first_idx]\n",
-    "            deciphered_text = SimpleSubstitution(child_key).decipher(cipher_text)\n",
-    "            child_score = compute_quadgrams_similarity(eng_quadgrams_df, deciphered_text)\n",
+    "            if child_key_trials_counter % 2 == 0:\n",
+    "                child_key = child_key[::-1]\n",
+    "            deciphered_text = ColTrans(\"\".join(child_key)).decipher(cipher_text)\n",
+    "            child_score = compute_quadgrams_similarity(eng_quadgram_df, deciphered_text)\n",
     "            if child_score > parent_score:\n",
     "                parent_score = child_score\n",
     "                parent_key = child_key.copy()\n",
@@ -364,10 +382,10 @@
     "            child_key_trials_counter += 1\n",
     "        if parent_score > best_score:\n",
     "            best_score = parent_score\n",
-    "            deciphered_text = SimpleSubstitution(parent_key).decipher(cipher_text)\n",
-    "            print(f'(Iter. {iteration_counter}) Best score so far {best_score}')\n",
+    "            deciphered_text = ColTrans(\"\".join(parent_key)).decipher(cipher_text)\n",
+    "            print(f'(Iter. {iteration_counter}) Best score so far {best_score}', sep=\"\\n\\n\")\n",
     "            print(\"Best key {}\".format(\"\".join(parent_key)))\n",
-    "            print(f'Plaintext {deciphered_text}')"
+    "            print(\"Plaintext {}\\n\".format(\" \".join(wrap(deciphered_text, 5))), sep=\"\\n\\n\")"
    ]
   },
   {
@@ -376,9 +394,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Uncomment to run. WARNING: the CPU load will increase slightly!\n",
-    "# break_mono_substitution(cipher_text, eng_quadgram_df)"
+    "processes = []\n",
+    "key_lenghts = [8,8,8,8]\n",
+    "for key_len in key_lenghts:\n",
+    "    p = multiprocessing.Process(target=break_coltrans, args=[key_len, cipher_text, eng_quadgram_df])\n",
+    "    p.start()\n",
+    "    processes.append(p)\n",
+    "    \n",
+    "for process in processes:\n",
+    "    process.join()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
